--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <title>Frontend Mentor | Social links profile</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="icon" href="images/favicon-32x32.png" type="image/png" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body></body>
 </html>
