--- a/index.html
+++ b/index.html
@@ -13,5 +13,49 @@
       rel="stylesheet"
     />
   </head>
-  <body></body>
+  <body class="bg-[#141414]">
+    <main class="flex h-screen items-center justify-center">
+      <div class="h-[30rem] w-72 rounded-lg bg-[#1f1f1f]">
+        <section class="flex h-[45%] flex-col items-center justify-center">
+          <img
+            class="mb-3 h-20 w-20 rounded-full"
+            src="images/avatar-jessica.jpeg"
+            alt="avatar-jessica"
+          />
+          <h1 class="mb-1 text-xl font-bold text-white">Jessica Randall</h1>
+          <p class="mb-4 text-xs text-[#CEE933]">London, United Kingdom</p>
+          <p class="text-xs text-[#969696]">
+            "Front-end developer and avid reader."
+          </p>
+        </section>
+        <section class="flex flex-col items-center gap-3">
+          <button
+            class="w-56 rounded-md bg-[#333333] py-2 text-sm text-white hover:bg-[#CEE933] hover:text-black"
+          >
+            GitHub
+          </button>
+          <button
+            class="w-56 rounded-md bg-[#333333] py-2 text-sm text-white hover:bg-[#CEE933] hover:text-black"
+          >
+            Frontend Mentor
+          </button>
+          <button
+            class="w-56 rounded-md bg-[#333333] py-2 text-sm text-white hover:bg-[#CEE933] hover:text-black"
+          >
+            Linkedin
+          </button>
+          <button
+            class="w-56 rounded-md bg-[#333333] py-2 text-sm text-white hover:bg-[#CEE933] hover:text-black"
+          >
+            Twitter
+          </button>
+          <button
+            class="w-56 rounded-md bg-[#333333] py-2 text-sm text-white hover:bg-[#CEE933] hover:text-black"
+          >
+            Instagram
+          </button>
+        </section>
+      </div>
+    </main>
+  </body>
 </html>
