--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             class="mb-3 h-20 w-20 rounded-full"
             src="images/avatar-jessica.jpeg"
             alt="avatar-jessica"
+            loading="lazy"
           />
           <h1 class="mb-1 text-xl font-bold text-white">Jessica Randall</h1>
           <p class="mb-4 text-xs text-[#CEE933]">London, United Kingdom</p>
