Added minimum height for large screens

--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
     />
   </head>
   <body class="bg-[#141414]">
-    <main class="flex h-screen items-center justify-center">
+    <main
+      class="flex h-screen items-center justify-center min-[1440px]:h-screen"
+    >
       <div class="h-[30rem] w-72 rounded-lg bg-[#1f1f1f]">
         <section class="flex h-[45%] flex-col items-center justify-center">
           <img
