Adjusted height and width for larger screens

--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
     <main
       class="flex h-screen items-center justify-center min-[1440px]:h-screen"
     >
-      <div class="h-[30rem] w-72 rounded-lg bg-[#1f1f1f]">
+      <div
+        class="h-[30rem] w-72 rounded-lg bg-[#1f1f1f] min-[1440px]:h-[35rem] min-[1440px]:w-96"
+      >
         <section class="flex h-[45%] flex-col items-center justify-center">
           <img
             class="mb-3 h-20 w-20 rounded-full"
