Update button width responsiveness for larger screens

--- a/index.html
+++ b/index.html
@@ -35,27 +35,27 @@
         </section>
         <section class="flex flex-col items-center gap-3">
           <button
-            class="w-56 rounded-md bg-[#333333] py-2 text-sm text-white hover:bg-[#CEE933] hover:text-black"
+            class="w-56 rounded-md bg-[#333333] py-2 text-sm text-white hover:bg-[#CEE933] hover:text-black min-[1440px]:w-72"
           >
             GitHub
           </button>
           <button
-            class="w-56 rounded-md bg-[#333333] py-2 text-sm text-white hover:bg-[#CEE933] hover:text-black"
+            class="w-56 rounded-md bg-[#333333] py-2 text-sm text-white hover:bg-[#CEE933] hover:text-black min-[1440px]:w-72"
           >
             Frontend Mentor
           </button>
           <button
-            class="w-56 rounded-md bg-[#333333] py-2 text-sm text-white hover:bg-[#CEE933] hover:text-black"
+            class="w-56 rounded-md bg-[#333333] py-2 text-sm text-white hover:bg-[#CEE933] hover:text-black min-[1440px]:w-72"
           >
             Linkedin
           </button>
           <button
-            class="w-56 rounded-md bg-[#333333] py-2 text-sm text-white hover:bg-[#CEE933] hover:text-black"
+            class="w-56 rounded-md bg-[#333333] py-2 text-sm text-white hover:bg-[#CEE933] hover:text-black min-[1440px]:w-72"
           >
             Twitter
           </button>
           <button
-            class="w-56 rounded-md bg-[#333333] py-2 text-sm text-white hover:bg-[#CEE933] hover:text-black"
+            class="w-56 rounded-md bg-[#333333] py-2 text-sm text-white hover:bg-[#CEE933] hover:text-black min-[1440px]:w-72"
           >
             Instagram
           </button>
