--- a/index.html
+++ b/index.html
@@ -20,20 +20,22 @@
       <div
         class="h-[30rem] w-72 rounded-lg bg-[#1f1f1f] min-[1440px]:h-[35rem] min-[1440px]:w-96"
       >
-        <section class="flex h-[45%] flex-col items-center justify-center">
+        <section
+          class="flex h-[45%] flex-col items-center justify-center min-[1440px]:h-[50%]"
+        >
           <img
-            class="mb-3 h-20 w-20 rounded-full"
+            class="mb-5 h-20 w-20 rounded-full min-[1440px]:h-28 min-[1440px]:w-28"
             src="images/avatar-jessica.jpeg"
             alt="avatar-jessica"
             loading="lazy"
           />
-          <h1 class="mb-1 text-xl font-bold text-white">Jessica Randall</h1>
-          <p class="mb-4 text-xs text-[#CEE933]">London, United Kingdom</p>
+          <h1 class="mb-1 text-2xl font-bold text-white">Jessica Randall</h1>
+          <p class="mb-6 text-xs text-[#CEE933]">London, United Kingdom</p>
           <p class="text-xs text-[#969696]">
             "Front-end developer and avid reader."
           </p>
         </section>
-        <section class="flex flex-col items-center gap-3">
+        <section class="flex flex-col items-center gap-3 min-[1440px]:h-[50%]">
           <button
             class="w-56 rounded-md bg-[#333333] py-2 text-sm text-white hover:bg-[#CEE933] hover:text-black min-[1440px]:w-72"
           >
